--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -3,9 +3,9 @@
     background: black;
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    width: 100wh;
     
+    width: 100wh;
+    position: relative;
    
     
 }
